# LBM_physics_experimnts

./: README.md
LBM_physics_exp/: CMakeLists.txt  README.md  display.cpp  display.hpp  kernel.cu  kernel.cuh  main.cpp  mainloop.cpp  mainloop.hpp
LBM_physics_exp/dependencies/common/inc/: helper_cuda.h  helper_functions.h  helper_image.h  helper_timer.h
